--- a/Slack.NetStandard.Annotations.Tests/Slack.NetStandard.Annotations.Tests.csproj
+++ b/Slack.NetStandard.Annotations.Tests/Slack.NetStandard.Annotations.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -19,12 +19,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+		<PackageReference Include="xunit" Version="2.4.2" />
 		<PackageReference Include="Verify.SourceGenerators" Version="1.5.0" />
-		<PackageReference Include="Verify.XUnit" Version="17.2.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+		<PackageReference Include="Verify.XUnit" Version="17.10.2" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
 
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
@@ -37,6 +41,10 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Slack.NetStandard.Annotations\Slack.NetStandard.Annotations.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Snapshots\" />
 	</ItemGroup>
 
 </Project>
