--- a/Slack.NetStandard.Annotations/Slack.NetStandard.Annotations.csproj
+++ b/Slack.NetStandard.Annotations/Slack.NetStandard.Annotations.csproj
@@ -18,6 +18,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Slack.NetStandard" Version="5.1.3" />
+		<PackageReference Include="Slack.NetStandard.RequestHandler" Version="3.1.1" />
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 		<None Include="..\LICENSE">
 			<Pack>True</Pack>
